# snark-verifier

./: Cargo.toml
snark-verifier/: Cargo.toml
snark-verifier-bytecode/: Cargo.toml
snark-verifier-bytecode/examples/: evm-verifier-with-accumulator.rs  evm-verifier.rs
snark-verifier-bytecode/src/loader/: evm.rs
snark-verifier-bytecode/src/loader/evm/: code.rs  loader.rs  util.rs
snark-verifier-bytecode/src/pcs/kzg/: decider.rs
snark-verifier-bytecode/src/system/halo2/test/kzg/: evm.rs
snark-verifier-bytecode/src/verifier/: plonk.rs
snark-verifier/examples/: evm-verifier.rs
snark-verifier/src/loader/: evm.rs
snark-verifier/src/loader/evm/: loader.rs
snark-verifier/src/pcs/kzg/: decider.rs
snark-verifier/src/system/halo2/: test.rs
snark-verifier/src/system/halo2/transcript/: evm.rs
